fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -164,13 +164,11 @@ div.portraits {
 
 div.pp_left {
     width: 45%;
-    height: 400px;
     float: left;
 }
 
 div.pp_right {
     width: 45%;
-    height: 400px;
     float: right;
 }
 
@@ -192,7 +190,7 @@ div.blg_right {
 
 div.sigmap {
     width: 100%;
-    height: 100%;
+    height: 400px;
     background: #fdfdfd";
 
 }
